--- a/cmd/capture/ui/index.html
+++ b/cmd/capture/ui/index.html
@@ -442,7 +442,12 @@
           const opt = document.createElement("option");
           opt.value = s.session_id;
           const started = s.started_at_ns ? fmtNS(s.started_at_ns) : "—";
-          opt.textContent = `${started} · ${s.command} · ${s.session_id.slice(0, 8)}`;
+          const extra = [];
+          if (s.cluster) extra.push(s.cluster);
+          if (s.kube_context) extra.push(s.kube_context);
+          if (s.namespace) extra.push(`ns/${s.namespace}`);
+          if (s.release) extra.push(s.release);
+          opt.textContent = `${started} · ${s.command} · ${extra.join(" · ")} · ${s.session_id.slice(0, 8)}`;
           sel.appendChild(opt);
         }
         if (state.sessions.length === 0) {
