ui: drop ktl capture label

--- a/cmd/capture/ui/index.html
+++ b/cmd/capture/ui/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ktl capture</title>
+    <title>capture</title>
     <style>
       :root {
         --surface: rgba(255, 255, 255, 0.9);
@@ -166,7 +166,7 @@
       <div class="layout">
         <div class="main">
           <div class="panel">
-            <h1 class="hero-title">ktl capture</h1>
+            <h1 class="hero-title">capture</h1>
             <div id="subtitle" class="subtitle">Loading sessions…</div>
             <div class="row">
               <select id="sessionSelect" class="select"></select>
